# hw-07

./: CMakeLists.txt
src/: array.cpp  doubly_list.cpp  list.cpp  main.cpp
test/: array_tests.cpp  doubly_list_tests.cpp  list_tests.cpp
